--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,43 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding:50px;
-
+    padding: 0;
+    margin-left: 30%;
+    background-color: aliceblue;
+}
+.head {
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
 }
 .container {
     background-color: white;
-    border: 1px solid black;
     height: 960px;
     width: 960px;
     display: flex;
-    flex-wrap: wrap;
-     
+    flex-wrap: wrap; 
+    border-radius: 10px;  
 }
+
 .grid {
-    border: 0.5px dotted black;
-    height: 56px;
-    width: 56px;
+    border: none;
+    margin: 0;
+    padding: 0;
     background-color: none;
-      
+       
 }
-.container,
-.grid {
-    border-radius: 5px;
+
+.button {
+    background-color: #0095dc;
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 22px;
+    font-weight:bolder;
+    padding: 6px 15px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    border: 2px solid white;
+    height: 80px;
+    width: 350px;
+}
+button:hover {
+    background-color: green;
 }
